# speed_bot_result

./: README.md  bot.py  main.py  pyproject.toml
static /: style.css
static/js/: main.js
templates/: index.html
