[tool.poetry]
name = "pro-speed-test-telegram"
version = "0.1.0"
description = "Тест скорости интернета как мини-приложение в Telegram"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
requests = "^2.31.0"
python-telegram-bot = "^20.7" # Добавлена библиотека для бота

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
